<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityDotaHistory">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/activity_dota_matchHistory_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_Dota_MatchHistory"
            android:layout_marginTop="@dimen/acitivy_lol_home_text_margintop"
            android:layout_marginLeft="@dimen/profile_margin_left"
            android:textSize="@dimen/activity_lol_home_text_size_summonerid"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_dota">

        <ImageView
            android:id="@+id/activity_lol_home_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <TextView
            android:id="@+id/activity_dota_matchHistory_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_Dota_MatchHistory_lastMatches"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_dota_text"
            />
        <TextView
            android:layout_below="@id/activity_dota_matchHistory_last"
            android:id="@+id/activity_dota_matchHistory_id1"
            android:layout_marginTop="@dimen/dota_matchHistory_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_Dota_MatchHistory_id1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/activity_dota_text"
            />
        <ImageView
            android:id="@+id/activity_dota_last_match_hero_picture"
            android:layout_below="@id/activity_dota_matchHistory_last"
            android:layout_toEndOf="@id/activity_dota_matchHistory_id1"
            android:layout_width="@dimen/dota_matchHistory_height"
            android:layout_height="@dimen/dota_matchHistory_height"
            android:layout_marginTop="@dimen/dota_matchHistory_margin_top"
            android:layout_marginLeft="@dimen/stats_margin_left"
            android:src="@drawable/last_game_hero"/>
        <TextView
            android:layout_marginTop="@dimen/dota_matchHistory_margin_top"
            android:id="@+id/activity_dota_matchHistory_side1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_dota_matchHistory_last"
            android:layout_toEndOf="@id/activity_dota_last_match_hero_picture"
            android:text="@string/activity_Dota_MatchHistory_Radiant"
            android:textColor="@android:color/white"
            android:layout_marginLeft="@dimen/stats_margin_left"
            android:textSize="@dimen/activity_dota_text"
            />



    </RelativeLayout>
</LinearLayout>